The header part of the about page is finished

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./scss/about.css">
+    <link rel="stylesheet" href="./css/about.css">
 </head>
 <body>
     <div class="wrapper-about">
@@ -20,13 +20,18 @@
                 </div>
                 
             </div>
-
-            <img class="about-img-menu" src="./img/about-img-menu.svg" alt="">
+            <div class="header-img-menu">
+                <p class="header-img-menu-p">Coffeeroasters began its journey of exotic discovery in 1999, highlighting stories of coffee from around the world. We have since been dedicated to bring the perfect cup - from bean to brew - in every shipment.</p>
+            </div>
             <div class="about-writing-menu">
                 <p class="about-writing-p1">About Us</p>
             </div>
         </header>
+        <section>
+            <div class="section-menu">
+
+            </div>
+        </section>
     </div>
-    
 </body>
 </html>
