--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>coffeeroasters-subscription-site</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -117,10 +117,32 @@
             <a href="#"><button class="sec-buttom">Create your plan</button></a>
         </section>
         <footer>
-            <div class="footer">
-                
-            </div>
-        </footer>
+            <nav>
+              <div class="logo-footer">
+                <img src="./img/footer-coffee-img.svg" alt="" />
+              </div>
+              <div class="navigation-footer">
+                <ul>
+                  <li><a href="./index.html">HOME</a></li>
+                  <li><a href="./html/about.html">ABOUT US</a></li>
+                  <li><a href="./html/subscribe.html">CREATE YOUR PLAN</a></li>
+                </ul>
+              </div>
+              <div class="icons">
+                <ion-icon name="logo-facebook" class="icon-style"></ion-icon>
+                <ion-icon name="logo-twitter" class="icon-style"></ion-icon>
+                <ion-icon name="logo-instagram" class="icon-style"></ion-icon>
+              </div>
+            </nav>
+          </footer>
     </div>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
