The second page is finished

--- a/about.html
+++ b/about.html
@@ -39,6 +39,66 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="section-button">
+                <div class="section-button-menu">
+                    <div class="section-button-min-menu">
+                        <div class="section-button-min-menu-p">
+                            <p class="section-button-min-menu-p1">Uncompromising quality</p>
+                            <p class="section-button-min-menu-p2">Although we work with growers who pay close attention to all stages of harvest and processing, we employ, on our end, a rigorous quality control program to avoid over-roasting or baking the coffee dry. Every bag of coffee is tagged with a roast date and batch number. Our goal is to roast consistent, user-friendly coffee, so that brewing is easy and enjoyable.</p>
+                            <!-- <img class="section-button-min-img" src="./img/coofee-picture.jpg" alt=""> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="countries-form">
+                    <p class="countries-form-p1">Our headquarters</p>
+                    <div class="countries-min-forms">
+                        <div class="countries-min-form1">
+                            <img src="./img/countries-img1.svg" alt="">
+                            <p class="countries-min-form1-p1">United Kingdom</p>
+                            <p class="countries-min-form1-p2">68  Asfordby Rd <br> Alcaston <br> SY6 1YA <br> +44 1241 918425</p>
+                        </div>
+                        <div class="countries-min-form2">
+                            <img src="./img/countries-img2.svg" alt="">
+                            <p class="countries-min-form1-p3">Canada</p>
+                            <p class="countries-min-form1-p4">1528 Eglinton Avenue <br> Toronto <br> Ontario M4P 1A6 <br> +1 416 485 2997</p>
+                        </div>
+                        <div class="countries-min-form3">
+                            <img src="./img/countries-img3.svg" alt="">
+                            <p class="countries-min-form1-p5">Australia</p>
+                            <p class="countries-min-form1-p6">36 Swanston Street <br> Kewell <br> Victoria <br> +61 4 9928 3629</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <nav>
+              <div class="logo-footer">
+                <img src="./img/footer-coffee-img.svg" alt="" />
+              </div>
+              <div class="navigation-footer">
+                <ul>
+                  <li><a href="./index.html">HOME</a></li>
+                  <li><a href="./html/about.html">ABOUT US</a></li>
+                  <li><a href="./html/subscribe.html">CREATE YOUR PLAN</a></li>
+                </ul>
+              </div>
+              <div class="icons">
+                <ion-icon name="logo-facebook" class="icon-style"></ion-icon>
+                <ion-icon name="logo-twitter" class="icon-style"></ion-icon>
+                <ion-icon name="logo-instagram" class="icon-style"></ion-icon>
+              </div>
+            </nav>
+          </footer>
     </div>
+    <script
+    type="module"
+    src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+  ></script>
+  <script
+    nomodule
+    src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+  ></script>
 </body>
 </html>
