--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/about.css">
 </head>
 <body>
+    <div class="contener-about">
     <div class="wrapper-about">
         <header>
             <div class="header-about">
@@ -15,7 +16,7 @@
                     <ul>
                         <li><a href="./index.html">HOME</a></li>
                         <li><a href="./about.html">ABOUT US</a></li>
-                        <li><a href="#">Create your plan</a></li>
+                        <li><a href="./subscribe.html">Create your plan</a></li>
                     </ul>
                 </div>
                 
@@ -31,7 +32,8 @@
         <section>
             <div class="section">
                 <div class="about-section-menu">
-                   <img src="./img/about-section-men-img.jpg" alt="">
+                   <img class="about-section-menu-img" src="./img/about-section-men-img.jpg" alt="">
+                   
                    <div class="about-section-menu-p-menu">
                     <p class="about-section-menu-p1">Our commitment</p>
                     <p class="about-section-menu-p2">We’re built on a simple mission and a commitment to doing good along the way. We want to make it easy for you to discover and brew the world’s best coffee at home. It all starts at the source. To locate the specific lots we want to purchase, we travel nearly 60 days a year trying to understand the challenges and opportunities in each of these places. We collaborate with exceptional coffee growers and empower a global community of farmers through with well above fair-trade benchmarks. We also offer training, support farm community initiatives, and invest in coffee plant science. Curating only the finest blends, we roast each lot to highlight tasting profiles distinctive to their native growing region.</p>
@@ -92,6 +94,7 @@
             </nav>
           </footer>
     </div>
+</div>
     <script
     type="module"
     src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
