--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <div class="contener">
     <div class="wrapper">
         <header>
             <div class="header">
                 <a href="#"><img src="./img/home-cofe-img.svg" alt=""></a>
                 <div class="header-a-menu">
                     <ul>
-                        <li><a href="#">HOME</a></li>
+                        <li><a href="./index.html">HOME</a></li>
                         <li><a href="./about.html">ABOUT US</a></li>
-                        <li><a href="#">Create your plan</a></li>
+                        <li><a href="./subscribe.html">Create your plan</a></li>
                     </ul>
                 </div>
                 
@@ -23,7 +24,12 @@
         </header>
         <section>
             <div class="section-img-menu">
-                <img class="section-img" src="./img/image-hero-coffeepress.jpg" alt="">
+              <div class="header-img-menu">
+                <p class="header-img-menu-p1">Great coffee made simple.</p>
+                <p class="header-img-menu-p2">Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule.</p>
+                <button class="header-img-menu-button">Create your plan</button>
+              </div>
+                <!-- <img class="section-img" src="./img/image-hero-coffeepress.jpg" alt=""> -->
                 <!-- <div class="section-img-writing-menu">
                     <h1 class="section-img-h1">Great coffee made simple.</h1>
                 <p class="section-img-p1">Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule.</p>
@@ -119,7 +125,7 @@
         <footer>
             <nav>
               <div class="logo-footer">
-                <img src="./img/footer-coffee-img.svg" alt="" />
+                <img class="footer-coffee-img" src="./img/footer-coffee-img.svg" alt="" />
               </div>
               <div class="navigation-footer">
                 <ul>
@@ -136,6 +142,7 @@
             </nav>
           </footer>
     </div>
+  </div>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
